--- a/src/Components/MovieCard.css
+++ b/src/Components/MovieCard.css
@@ -1,6 +1,6 @@
 .movie-container {
     display: flex;
-    max-width: 230px;
+    width: 230px;
     min-height: 450px;
     flex-direction: column;
     align-items: center;
@@ -31,3 +31,9 @@
 
 }
 
+@media (max-width: 501px) {
+    .movie-container {
+        width: 320px;
+    }
+
+}
